# FamilyTree

./: .gitignore  README.md  pyproject.toml
FamilyTree/FamilyTree/: asgi.py  settings.py  urls.py  wsgi.py
FamilyTree/family_tree/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
FamilyTree/family_tree/migrations/: 0001_initial.py
FamilyTree/family_tree/templates/family_tree/: index.html  new_family_member.html  person_detail.html  person_list.html
FamilyTree/templates/: base.html
FamilyTree/users/: authentication.py  context_processors.py  forms.py  urls.py  views.py
FamilyTree/users/templates/users/: login.html  logout.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  register.html  register_done.html
