[tool.poetry]
name = "FamilyTree"
version = "0.1.0"
description = "No description"
authors = ["Dmitriy & Vladimir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.config]
virtualenvs.in-project = true