[tool.poetry]
name = "FamilyTree"
version = "0.1.0"
description = "No description"
authors = ["Dmitriy & Vladimir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0"
psycopg2 = "^2.9.9"
django-debug-toolbar = "^4.3.0"
pillow = "^10.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
